@@ -1,3 +1,7 @@
+2007-07-11  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp-common.eclass: Add magic comments for man page generation.
+
 2007-07-08  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp-common.eclass (elisp-site-regen): Put proper header
